# models/Department.js
@@ -1,10 +1,10 @@
-const mongoose = require('mongoose');
+const mongoose = require("mongoose");
 
 const departmentSchema = new mongoose.Schema({
   deptId: { type: String, required: true, unique: true },
   name: { type: String, required: true, trim: true },
   location: { type: String },
-  departmentEmail: { type: String, lowercase: true, trim: true }
+  departmentEmail: { type: String, lowercase: true, trim: true },
 });
 
-module.exports = mongoose.model('Department', departmentSchema);
+module.exports = mongoose.model("Department", departmentSchema);
