# routes/course.js
@@ -1,16 +1,16 @@
-const express = require('express');
+const express = require("express");
 const router = express.Router();
-const courseController = require('../controllers/courseController');
-//const authenticateJWT = require('../middlewares/authenticateJWT'); 
+const courseController = require("../controllers/courseController");
+//const authenticateJWT = require('../middlewares/authenticateJWT');
 
 // GET routes
-router.get('/', courseController.getCourses);
-router.get('/:courseId', courseController.getCourseById);
-// Post route 
-router.post('/', courseController.createCourse);
+router.get("/", courseController.getCourses);
+router.get("/:courseId", courseController.getCourseById);
+// Post route
+router.post("/", courseController.createCourse);
 // Put route
-router.put('/:courseId', courseController.updateCourse);
+router.put("/:courseId", courseController.updateCourse);
 // Delete route
-router.delete('/:courseId', courseController.deleteCourse);
+router.delete("/:courseId", courseController.deleteCourse);
 
 module.exports = router;
