# routes/teacher.js
@@ -1,20 +1,20 @@
-const express = require('express');
+const express = require("express");
 const router = express.Router();
-const teacherController = require('../controllers/teacherController');
+const teacherController = require("../controllers/teacherController");
 
 // GET all teachers (with optional filter by departmentId)
-router.get('/', teacherController.getTeachers);
+router.get("/", teacherController.getTeachers);
 
 // GET single teacher by teacherId
-router.get('/:teacherId', teacherController.getTeacherById);
+router.get("/:teacherId", teacherController.getTeacherById);
 
 // POST create new teacher
-router.post('/', teacherController.createTeacher);
+router.post("/", teacherController.createTeacher);
 
 // PUT update teacher by teacherId
-router.put('/:teacherId', teacherController.updateTeacher);
+router.put("/:teacherId", teacherController.updateTeacher);
 
 // DELETE teacher by teacherId
-router.delete('/:teacherId', teacherController.deleteTeacher);
+router.delete("/:teacherId", teacherController.deleteTeacher);
 
 module.exports = router;
